update font styles and remove depicated stylesheets

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,3 +1,4 @@
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700);
 h1 {
   font-size: 2.75rem; }
 
@@ -162,7 +163,7 @@ html {
 
 body {
   color: #2b2b2b;
-  font-family: 'Noto Serif', serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   line-height: 1.6;
   background-color: whitesmoke;
@@ -273,7 +274,7 @@ table {
   .site-head h2.blog-description {
     font-size: 1.125rem;
     font-weight: 300;
-    font-family: 'Noto Serif', serif;
+    font-family: 'Open Sans', sans-serif;
     max-width: 43.75rem;
     margin-left: auto;
     margin-right: auto;
@@ -298,7 +299,7 @@ table {
 .post-meta {
   display: inline-block;
   margin: 0 0 0.25rem 0;
-  font-family: 'Noto Serif', serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 1rem;
   color: #9b9b9b; }
   .post-meta a {
