--- a/assets/sass/_settings.scss
+++ b/assets/sass/_settings.scss
@@ -63,7 +63,7 @@ $indent-amount: 1em;
 
 // Fonts
 
-$base-font-family: 'Noto Serif', serif;
+$base-font-family: 'Open Sans', sans-serif;
 $header-font-family: 'Open Sans', sans-serif;
 
 
