--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -6,6 +6,8 @@
 
 // ========= Project Styles =========
 
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700);
+
 // Functions are imported within _settings
 
 @import "settings";
