--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -1,12 +1,11 @@
 
-
 // Application Styles
 // ============================================================
 
 
 // ========= Project Styles =========
 
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700);
+@import "fonts";
 
 // Functions are imported within _settings
 
@@ -24,3 +23,6 @@
 
 @import "core";
 
+// Component Imports
+
+@import "components/navigation";
