--- a/assets/sass/libs/_typography.scss
+++ b/assets/sass/libs/_typography.scss
@@ -5,8 +5,25 @@
 
 // h1, h2, h3, h4, h5, h6
 
+
+h1, h2, h3, h4, h5, h6 {
+	color: $heading-color;
+	font-family: $header-font-family;
+	line-height: 1.4;
+	margin-top: 1.4em;
+	margin-bottom: 1.4em;
+	small {
+		font-size: $small-font-size;
+		opacity: 0.8;
+		line-height: 0;
+	}
+}
+
 h1 {
 	font-size: $h1-font-size;
+	text-transform: uppercase;
+	letter-spacing: 0.15em;
+	text-shadow: 0 0.125rem 0.5rem white;
 }
 
 h2 {
@@ -29,25 +46,21 @@ h6 {
 	font-size: $h6-font-size;
 }
 
-h1, h2, h3, h4, h5, h6 {
-	color: $heading-color;
-	font-family: $header-font-family;
-	line-height: 1.25;
-	small {
-		font-size: $small-font-size;
-		opacity: 0.8;
-		line-height: 0;
-	}
-}
 
 // p, pre, label
 
 p {
 	line-height: $base-line-height;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 1em;
+
 }
 
 pre {
 	white-space: pre-wrap;
+	margin-top: 2rem;
+	margin-bottom: 2rem;
 }
 
 // ol, ul, dl
@@ -86,11 +99,19 @@ q {
 blockquote {
 	border-left: 0.25 solid $secondary;
 	line-height: normal;
-	margin-left: $indent-amount;
-	margin-right: $indent-amount;
+	// background-color: mix($base-bg, $base-color,97%);
+	margin-left: 0;
+	margin-right: 0;
+	padding-top: 2rem;
+	padding-bottom: 2rem;
 	p {
 		font-style: italic;
+		font-weight: 300;
+		font-size: 1.5rem;
+		letter-spacing: 0.038em;
 		margin: 0;
+		border-left: rem-calc(6) solid $tertiary;
+		padding-left: $indent-amount;
 	}
 }
 
@@ -120,9 +141,6 @@ code, kbd, pre, samp {
 	font-size: 1em;
 }
 
-pre > code {
-	display: block;
-	padding: 2rem;
-	background-color: mix($base-bg, $base-color,95%);
-
+pre {
+	background-color: mix($base-bg, $base-color,97%);
 }
