--- a/default.hbs
+++ b/default.hbs
@@ -26,7 +26,7 @@
 	{{! Everything else gets inserted here }}
 	{{{body}}}
 
-	<footer class="site-footer">
+	<footer class="site-footer"  {{#if @blog.cover}}style="background-image: url({{@blog.cover}})"{{/if}}>
 		<a class="subscribe icon-feed" href="{{@blog.url}}/rss/"><span class="tooltip">Subscribe!</span></a>
 		<div class="inner">
 			 <section class="copyright">All content copyright <a href="{{@blog.url}}/">{{@blog.title}}</a> &copy; {{date format="YYYY"}} &bull; All rights reserved.</section>
