--- a/post.hbs
+++ b/post.hbs
@@ -5,39 +5,40 @@
 
 <main class="content" role="main">
 
+<header class="site-head" >
+	<div class="site-head-content inner">
+			<h1 class="blog-title">{{@blog.title}}</h1>
+	</div>
+</header>
 	<article class="{{post_class}}">
 
 		{{! Each post has the blog logo at the top, with a link back to the home page }}
-		<header class="post-header">
-			<a class="blog-logo" href="{{@blog.url}}">
-				{{#if @blog.logo}}
-					<img src="{{@blog.logo}}" alt="Blog Logo" />
-				{{else}}
-					<span class="blog-title">{{@blog.title}}</span>
-				{{/if}}
-			</a>
-		</header>
+		
 
 		{{! Everything inside the #post tags pulls data from the post }}
 		{{#post}}
 
-			<span class="post-meta"><time datetime="{{date format="YYYY-MM-DD"}}">{{date format='DD MMM YYYY'}}</time> {{tags prefix="on " separator=" | "}}</span>
-
 			<h1 class="post-title">{{{title}}}</h1>
-
+				<span class="post-meta"><time datetime="{{date format="YYYY-MM-DD"}}">{{date format='DD MMM YYYY'}}</time> {{tags separator=" "}}</span>
 			<section class="post-content">
 				{{content}}
 			</section>
 
 			<footer class="post-footer">
 
-				<section class="author">
+				<section class="author clearfix">
+					{{#if author.image}}
+						<img src="{{author.image}}">
+					{{/if}}
 					<h4>{{author.name}}</h4>
-					<p>{{author.bio}}</p>
-					<ul class="author-meta clearfix">
+					<ul class="author-meta">
 						{{#if author.location}}<li>{{author.location}}</li>{{/if}}
 						{{#if author.website}}<li><a href="{{author.website}}">{{author.website}}</a></li>{{/if}}
 					</ul>
+					{{#if author.bio}}
+						<p>{{author.bio}}</p>
+					{{/if}}
+					
 				</section>
 
 				<section class="share">
